--- a/style.css
+++ b/style.css
@@ -1,167 +1,125 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
- body {
+body {
+    background: linear-gradient(45deg, rgb(208, 204, 233),rgb(157, 150, 197));
     width: 100vw;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(360deg, rgb(175, 172, 172), rgb(5, 5, 5));
- }
+}
 
- .container {
-    width: 30%;
-    height: 98%;
-    border-radius: 10px;
-    background-image: url('https://i.pinimg.com/originals/f7/86/11/f7861111e7f273466b5e746a670031ba.gif');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
- }
+.container {
+    background-color: white;
+    width: 40%;
+    height: 80%;
+    border-radius: 15px;
+    padding: 50px 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
 
- .display {
+h1 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 600;
+    font-size: 1.5rem;
+}
+
+.inputArea {
     width: 100%;
-    height: 35%;
- }
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+}
 
- .inputArea{
-   width: 100%;
-   height: 20%;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   /* border: 2px solid black; */
-   margin-top: 4px;
- }
-
- .inputArea input {
-   width: 200px;
-   height: 40px;
-   padding: 5px 5px;
-   border-radius: 10px;
-   outline: none;
-   border: none;
-   opacity: 0.4;
-
- }
+.inputArea input {
+    width: 280px;
+    height: 85%;
+    padding-left: 10px;
+    border: none;
+    background-color: rgb(229, 234, 241);
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    outline: none;
+}
 
 .inputArea button {
-   width: 40px;
-   height: 40px;
-   border-radius: 50%;
-   outline: none;
-   border: none;
-   margin-left: 7px;
-   opacity: 0.4;
-   color: black;
-   font-size: 1.5rem;
-   display: flex;
-   align-items: center;
-   justify-content: center;
+    width: 50px;
+    height: 85%;
+    background-color: rgb(82, 174, 228);
+    border: none;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    color: white;
+    cursor: pointer;
 }
 
-.currentweather {
-   width: 100%;
-   height: 80%;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   /* border: 2px solid black; */
-   flex-direction: column;
-   color: white;
-}
-
-.currentCity {
-   font-size: 1.3rem;
-   font-weight: 400;
-}
-
-.currentTemp {
-   font-size: 4.5rem;
-}
-
-.currentcondition {
-   font-size: 1.1rem;
-   font-weight: 400;
-}
-
-
-
- .hourlyweather {
-    width: 100%;
-    height: 15%;
+.listArea {
+    width: 85%;
+    max-height: 70%;
+    overflow-y: auto;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    color: rgb(255, 255, 255);
-    font-size: 1.3rem;
-    background-color: rgb(0, 0, 0);
-    opacity: 0.4;
- }
-
- .portion {
-   width: 20%;
-   height: 90%;
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
-
- }
-
- .hourlytime {
-   width: 100%;
-   height: 33%;
-   text-align: center;
- }
-
- .hourlyicon {
-   width: 100%;
-   height: 33%;
-   text-align: center;
- }
-
-.hourlytemp {
-   width: 100%;
-   height: 33%;
-   text-align: center;
-}
-
-
-
-
-
- .dailyweather {
-    width: 100%;
-    height: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
- }
+    gap: 10px;
+}
 
- .secondPortion {
-   width: 100%;
-   height: 47px;
-   display: flex;
-   justify-content: space-between;
-   color: rgb(254, 251, 251);
-   align-items: center;
-   background-color: rgb(0, 0, 0);
-   opacity: 0.5;
-   font-weight: 600;
-   padding: 0px 20px;
- }
+/* .edit {
+    padding: 3px 5px;
+    width: 45px;
+    border-radius: 5px;
+    background-color: rgb(82, 174, 228);
+    border: none;
+}
 
- .dailyicon {
-   width: 30%;
-   height: 100%;
- }
+.delete {
+    padding: 3px 5px;
+    width: 55px;
+    border-radius: 5px;
+    background-color: rgb(82, 174, 228);
+    border: none;
+} */
 
- 
+p {
+    font-size: 1rem;
+    font-weight: 500;
+    margin-right: 10px;
+}
 
+
+.project-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    /* background-color: rgb(240, 242, 247); */
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+
+}
+
+.editArea {
+    display: flex;
+    gap: 5px;
+}
+
+.edit, .delete {
+    padding: 5px 10px;
+    border-radius: 5px;
+    background-color: rgb(82, 174, 228);
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
+.edit:hover, .delete:hover, .inputArea button:hover {
+    background-color: rgb(60, 148, 200);
+}
